--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,11 +1,12 @@
-[target.'cfg(all(target_arch = "arm", target_os = "none"))']
+[build]
+target = "thumbv6m-none-eabi"
+
+[target.thumbv6m-none-eabi]
 rustflags = [
   "-C", "link-arg=-Tlink.x",
-  # This is needed if your flash or ram addresses are not aligned to 0x10000 in memory.x
-  # See https://github.com/rust-embedded/cortex-m-quickstart/pull/95
-  "-C", "link-arg=--nmagic",
   "-C", "link-arg=-Tdefmt.x",
 ]
 
-[build]
-target = "thumbv6m-none-eabi"    # Cortex-M0 and Cortex-M0+
+# runner の例（必要に応じて有効化）
+# runner = "probe-rs run --chip RP2040"
+
