--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rp2040-hal = { version = "0.10", features = ["rt", "defmt"] }
+rp2040-hal = { version = "0.10", features = ["rt", "defmt", "critical-section-impl"] }
 rp2040-boot2 = "0.3"
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
-embedded-hal = "0.2.7"
+embedded-hal = "1.0"
 fugit = "0.3"
 defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
+libm = "0.2"
 
 # INA219 ドライバ（同期APIを使用）
 # crates.io の最新版（0.2系）に合わせる
