feat: Update INA219 I2C address and improve debug logging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,8 @@
           "flashingEnabled": true,
         },
         "chip": "RP2040",
+        "probe": "6666:4444:xiao-rp2040",
+        //"probe": "6666:4444:pico-bridge-swd",
         "coreConfigs": [
           {
             "programBinary": "target/thumbv6m-none-eabi/debug/pico-va-monitor",
